[build-system]
requires = ["setuptools >= 75.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbz-tcg"
version = "0.0.1"
dependencies = ["numpy", "tabulate"]
authors = [{name = "Ryan Anderson"}]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/ryandy/tcg.git"
Issues = "https://github.com/ryandy/tcg/issues"

[tool.setuptools.packages.find]
where = ["."]
